mac: Fix size of dragged image from omnibox.

BUG=600681

Review URL: https://codereview.chromium.org/1862623004

Cr-Commit-Position: refs/heads/master@{#385489}

Former-commit-id: bc0807bcd070adb64bc872caaae5f12b7f25b0d0